--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -3,15 +3,16 @@
     "com.heathen.systemcore": "https://github.com/heathen-engineering/SystemCore.git?path=/com.heathen.systemcore",
     "com.rlabrecque.steamworks.net": "https://github.com/rlabrecque/Steamworks.NET.git?path=/com.rlabrecque.steamworks.net",
     "com.unity.2d.sprite": "1.0.0",
-    "com.unity.ai.navigation": "2.0.4",
+    "com.unity.ai.navigation": "2.0.5",
     "com.unity.animation.rigging": "1.3.0",
-    "com.unity.collab-proxy": "2.4.4",
+    "com.unity.collab-proxy": "2.6.0",
     "com.unity.feature.development": "1.0.2",
-    "com.unity.inputsystem": "1.7.0",
-    "com.unity.render-pipelines.universal": "16.0.6",
+    "com.unity.inputsystem": "1.11.2",
+    "com.unity.multiplayer.center": "1.0.0",
+    "com.unity.render-pipelines.universal": "17.0.3",
     "com.unity.timeline": "1.8.7",
     "com.unity.ugui": "2.0.0",
-    "com.unity.visualscripting": "1.8.0",
+    "com.unity.visualscripting": "1.9.5",
     "com.unity.modules.accessibility": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
