--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,15 @@
 name: Build project
 
-on: [push]
+on:
+  push:
+    tags:
+      - 'v*.*.*' # e.g. v0.1.0
+  workflow_dispatch:
+    inputs:
+      version:
+        description: 'Version name (e.g. v0.1.0)'
+        required: true
+        default: 'v0.1.0'
 
 jobs:
   buildForAllSupportedPlatforms:
@@ -10,19 +19,22 @@ jobs:
       fail-fast: false
       matrix:
         targetPlatform:
-          - StandaloneWindows64 # Build a Windows 64-bit standalone.
+          - StandaloneWindows64
     steps:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
           lfs: true
+
       - uses: actions/cache@v3
         with:
           path: Library
           key: Library-${{ matrix.targetPlatform }}
           restore-keys: Library-
+
       - if: matrix.targetPlatform == 'Android'
         uses: jlumbroso/free-disk-space@v1.3.1
+
       - uses: game-ci/unity-builder@v4
         env:
           UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
@@ -30,7 +42,28 @@ jobs:
           UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
         with:
           targetPlatform: ${{ matrix.targetPlatform }}
+
       - uses: actions/upload-artifact@v4
         with:
           name: Build-${{ matrix.targetPlatform }}
           path: build/${{ matrix.targetPlatform }}
+
+      # Create GitHub Release
+      - name: Create Release
+        uses: softprops/action-gh-release@v1
+        with:
+          tag_name: ${{ github.event.inputs.version || github.ref_name }}
+          name: NecroStrike-${{ github.event.inputs.version || github.ref_name }}
+          files: build/${{ matrix.targetPlatform }}/**
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      # Upload to itch.io
+      - name: Upload to itch.io
+        uses: manleydev/butler-publish-itchio-action@master
+        with:
+          butlerApiKey: ${{ secrets.BUTLER_API_KEY }}
+          gameData: build/${{ matrix.targetPlatform }}
+          itchUsername: theoscreation
+          itchGameId: zombie-game
+          channel: windows
