so proper naming goes through to itch.io

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -70,6 +70,9 @@ jobs:
         uses: manleydev/butler-publish-itchio-action@master
         with:
           entryPoint: butler
-          args: push "NecroStrike-${{ steps.version.outputs.version }}-${{ matrix.targetPlatform }}.zip" theoscreation/zombie-game:windows
+          args: >
+            push "NecroStrike-${{ steps.version.outputs.version }}-${{ matrix.targetPlatform }}.zip"
+            theoscreation/necrostrike:windows
+            --userversion "NecroStrike-${{ steps.version.outputs.version }}"
         env:
           BUTLER_API_KEY: ${{ secrets.BUTLER_API_KEY }}
